--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Exercise app used to test React, Webpack and Azure DevOps CI/CD features.",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production"
   },
   "author": "Tomasz Kontek",
@@ -16,7 +17,8 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "react": "^16.13.1",
